[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Litia Team <fakeemail@fakeemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.110.0"}
asyncpg = "^0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}
tenacity = "^8.2.3"
alembic = "^1.13.1"
meilisearch-python-sdk = "^2.8.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
ruff = "^0.3.3"
pytest-asyncio = "^0.23.6"
pytest = "^8.1.1"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select=["E", "F", "D", "UP", "I001", "T201", "T203"]
lint.ignore=[
  # Recommened ignores by ruff when using formatter
  # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  "E501",
  "W191",
  "E111",
  "E114",
  "E117",
  "D100",
  "D104",
  "D203",
  "D206",
  "D213",
  "D300",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "COM812",
  "COM819",
  "ISC001",
  "ISC002",
]
lint.exclude = ["tests/*", "alembic/versions/*"]
target-version = "py310"
fix = true
